- Refactor CFG generation to use BasicBlocks - Build CFG from BasicBlocks instead of LinearIRBlocks - Make Label and LinearIRBlock comparable - Add JMP interface for jump instructions - Refactor CJMP and JMP to implement JMP interface - Update control flow analysis visitors to use generics